fixing the stretch issues with the grids.

--- a/_src/thinkshift/modules/grid.scss
+++ b/_src/thinkshift/modules/grid.scss
@@ -6,12 +6,13 @@
 // -----------------------------------------------------------------------------
 // Grid Config
 // -----------------------------------------------------------------------------
-$grid-container-width: 960px!default; // the width of the grid container.
-$grid-columns:            12!default; // number of columns in the grid.
+$grid-container-width:   960!default; // the width of the grid container.
+$grid-columns:           12!default;  // number of columns in the grid.
+$grid-spacing:           20!default;  // spacing in between grid columns.
+
 //$grid-padding:             0!default; // padding within a column.
 //$grid-border-width:        0!default; // width of the border, for maths.
 //$grid-border:           none!default; // border-style for grid columns.
-$grid-spacing:          20px!default; // spacing in between grid columns.
 //$form-field-padding:       0!default; // no form-grid compatability unless specified in forms.scss
 
 // Options
@@ -54,12 +55,12 @@ $with-colstretch: true!default;
       float: left;
         
       @if $column-width > 0 {
-        width: $column-width;
+        width: #{$column-width}px;
       }
         
       $margin: (floor($grid-spacing/2)); // left and right margin.
 			@if $margin != 0 {
-				margin: 0 $margin 20px;
+				margin: 0 #{$margin}px 20px;
 			}
       
       // =========
@@ -99,7 +100,7 @@ $with-colstretch: true!default;
           &.#{$namespace}colspan#{$n} {
             // width is the column width + spacing.
             // |m|column|mm|column|m|
-            width: $span-width;
+            width: #{$span-width}px;
 
           }
         }
@@ -108,28 +109,28 @@ $with-colstretch: true!default;
         @if $n < 12 {
           @if $with-colshift == true {
             &.#{$namespace}colshift#{$n} {
-              margin-left: $span-width + $margin + $margin + $margin;
+              margin-left: #{$span-width + $margin + $margin + $margin}px;
             }
           } // ENDIF $with-colshift
         
           @if $with-colpush == true {
             &.#{$namespace}colpush#{$n} {
-              margin-right: $span-width + $margin + $margin + $margin;
+              margin-right: #{$span-width + $margin + $margin + $margin}px;
             }
           } // ENDIF $with-colpush
           
           @if $with-colstretch == true {
             &.#{$namespace}colstretch#{$n} {
-              padding-left: floor($span-width / 2) + $margin;
-              padding-right: floor($span-width / 2) + $margin;
+              padding-left: #{floor($span-width / 2) + $margin}px;
+              padding-right: #{floor($span-width / 2) + $margin}px;
             }
         
             &.#{$namespace}colstretch-left#{$n} {
-              padding-left: $span-width + $margin + $margin;
+              padding-left: #{$span-width + $margin + $margin}px;
             }
         
             &.#{$namespace}colstretch-right#{$n} {
-              padding-right: $span-width + $margin + $margin;
+              padding-right: #{$span-width + $margin + $margin}px;
             }
           } // ENDIF $with-colstretch
         } // ENDIF $n < 12
@@ -159,14 +160,10 @@ $with-colstretch: true!default;
               width: $span-width;
             
               // recursive grids, percentage recalculations only...
-//              @for $rn from 2 to $grid-columns + 1 {
-              
-                .#{$namespace}col{
-                  width: 100%!important;
-                  margin: 0 0 20px 0!important;
-                }
-              
-//              }
+              .#{$namespace}col{
+                width: 100%!important;
+                margin: 0 0 20px 0!important;
+              }
             }
           } // ENDIF $n > 1
           
@@ -186,8 +183,8 @@ $with-colstretch: true!default;
           
             @if $with-colstretch == true {
               &.#{$namespace}colstretch#{$n} {
-                padding-left: floor($span-width / 2) + $margin;
-                padding-right: floor($span-width / 2) + $margin;
+                padding-left: ($span-width / 2) + $margin;
+                padding-right: ($span-width / 2) + $margin;
               }
         
               &.#{$namespace}colstretch-left#{$n} {
