--- a/css/main.css
+++ b/css/main.css
@@ -1187,8 +1187,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush1 {
           margin-right: 9.375%; }
         .grid .col.colstretch1 {
-          padding-left: 4.04167%;
-          padding-right: 4.04167%; }
+          padding-left: 4.16667%;
+          padding-right: 4.16667%; }
         .grid .col.colstretch-left1 {
           padding-left: 8.33333%; }
         .grid .col.colstretch-right1 {
@@ -1203,8 +1203,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush2 {
           margin-right: 17.70833%; }
         .grid .col.colstretch2 {
-          padding-left: 8.04167%;
-          padding-right: 8.04167%; }
+          padding-left: 8.33333%;
+          padding-right: 8.33333%; }
         .grid .col.colstretch-left2 {
           padding-left: 16.66667%; }
         .grid .col.colstretch-right2 {
@@ -1219,8 +1219,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush3 {
           margin-right: 26.04167%; }
         .grid .col.colstretch3 {
-          padding-left: 12.04167%;
-          padding-right: 12.04167%; }
+          padding-left: 12.5%;
+          padding-right: 12.5%; }
         .grid .col.colstretch-left3 {
           padding-left: 25%; }
         .grid .col.colstretch-right3 {
@@ -1235,8 +1235,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush4 {
           margin-right: 34.375%; }
         .grid .col.colstretch4 {
-          padding-left: 16.04167%;
-          padding-right: 16.04167%; }
+          padding-left: 16.66667%;
+          padding-right: 16.66667%; }
         .grid .col.colstretch-left4 {
           padding-left: 33.33333%; }
         .grid .col.colstretch-right4 {
@@ -1251,8 +1251,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush5 {
           margin-right: 42.70833%; }
         .grid .col.colstretch5 {
-          padding-left: 20.04167%;
-          padding-right: 20.04167%; }
+          padding-left: 20.83333%;
+          padding-right: 20.83333%; }
         .grid .col.colstretch-left5 {
           padding-left: 41.66667%; }
         .grid .col.colstretch-right5 {
@@ -1267,8 +1267,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush6 {
           margin-right: 51.04167%; }
         .grid .col.colstretch6 {
-          padding-left: 24.04167%;
-          padding-right: 24.04167%; }
+          padding-left: 25.0%;
+          padding-right: 25.0%; }
         .grid .col.colstretch-left6 {
           padding-left: 50%; }
         .grid .col.colstretch-right6 {
@@ -1283,8 +1283,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush7 {
           margin-right: 59.375%; }
         .grid .col.colstretch7 {
-          padding-left: 29.04167%;
-          padding-right: 29.04167%; }
+          padding-left: 29.16667%;
+          padding-right: 29.16667%; }
         .grid .col.colstretch-left7 {
           padding-left: 58.33333%; }
         .grid .col.colstretch-right7 {
@@ -1299,8 +1299,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush8 {
           margin-right: 67.70833%; }
         .grid .col.colstretch8 {
-          padding-left: 33.04167%;
-          padding-right: 33.04167%; }
+          padding-left: 33.33333%;
+          padding-right: 33.33333%; }
         .grid .col.colstretch-left8 {
           padding-left: 66.66667%; }
         .grid .col.colstretch-right8 {
@@ -1315,8 +1315,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush9 {
           margin-right: 76.04167%; }
         .grid .col.colstretch9 {
-          padding-left: 37.04167%;
-          padding-right: 37.04167%; }
+          padding-left: 37.5%;
+          padding-right: 37.5%; }
         .grid .col.colstretch-left9 {
           padding-left: 75%; }
         .grid .col.colstretch-right9 {
@@ -1331,8 +1331,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush10 {
           margin-right: 84.375%; }
         .grid .col.colstretch10 {
-          padding-left: 41.04167%;
-          padding-right: 41.04167%; }
+          padding-left: 41.66667%;
+          padding-right: 41.66667%; }
         .grid .col.colstretch-left10 {
           padding-left: 83.33333%; }
         .grid .col.colstretch-right10 {
@@ -1347,8 +1347,8 @@ input:focus:input-placeholder, textarea:focus:input-placeholder {
         .grid .col.colpush11 {
           margin-right: 92.70833%; }
         .grid .col.colstretch11 {
-          padding-left: 45.04167%;
-          padding-right: 45.04167%; }
+          padding-left: 45.83333%;
+          padding-right: 45.83333%; }
         .grid .col.colstretch-left11 {
           padding-left: 91.66667%; }
         .grid .col.colstretch-right11 {
